
install_data([
  'PCN-1.caffemodel',
  'PCN-1.prototxt',
  'PCN-2.caffemodel',
  'PCN-2.prototxt',
  'PCN-3.caffemodel',
  'PCN-3.prototxt',
  'PCN-Tracking.caffemodel',
  'PCN-Tracking.prototxt',
  'PCN-1.bin',
  'PCN-1.xml',
  'PCN-2.bin',
  'PCN-2.xml',
  'PCN-3.bin',
  'PCN-3.xml',
  'PCN-Tracking.bin',
  'PCN-Tracking.xml'
  ],
  install_dir : MODELS_DATADIR
)
